Fixed reporting and swagger
